# BI-Agent

./: .coveragerc  .env.example  .gitignore  AGENTS.md  ANALYSIS_INDEX.md  BLOCKING_CALLS_SUMMARY.md  CLAUDE.md  IMPLEMENTATION_SUMMARY_STEP_4_2.md  PHASE2_COMPLETION_REPORT.md  PHASE3_COMPLETION_SUMMARY.md  QA_TEST_REPORT.md  QA_TEST_SUMMARY.md  README.md  SKILL.md  STEP_4_2_COMPLETION_CHECKLIST.md  TUI_ASYNC_ANALYSIS.md  TYPE_CORRECTION_IMPLEMENTATION_SUMMARY.md  analyze_bi_json.py  bandit_qa_report.json  bandit_qa_report_new.json  bandit_report_v2.json  bi-agent  convert_tableau.py  demo_full_flow.py  demo_mvp.py  demo_type_correction_grid.py  mcp.json.example  npm_audit_report.json  npm_audit_report_qa.json  package.json  plan.md  postgres_mcp.py  pyproject.toml  pytest.ini  run-bi-agent.py  run_demo.sh  setup.py  test_api_connection.py  test_type_correction_grid.py
.agent/: plan.json
.agent/config/: user-preferences.yaml
.agent/rules/: agent-guide-lines.md
.claude/: settings.json
.claude/commands/: bi-ab.md  bi-analyze.md  bi-connect.md  bi-domain.md  bi-explore.md  bi-help.md  bi-history.md  bi-report.md  bi-setup.md  bi-solve.md  bi-stats.md  bi-viz.md
.github/workflows/: pypi-publish.yml
.omc/: ralplan-state.json  ultrawork-state.json
.omc/drafts/: t6-tui-preview-spec.md
.omc/plans/: bi-agent-console-refactoring.md  bi-agent-detailed-implementation.md  bi-agent-mvp-detailed-design.md  mvp-bi-meta-json.md  python-mcp-server-migration.md  t5-integration-notes.md
.omc/status/: mvp-dashboard.md
.omc/todos/: t1-tableau-meta-schema.md  t2-nl-intent-parser.md
.serena/memories/: orchestrator-session.md  progress-backend.md  result-backend.md  session-coordinate.md  task-board.md
analyses/test/: 01-ask.md  _meta.yaml
backend/: cli.py  main.py  mcp_bridge.py  requirements.txt  test_orchestrator.py
backend/aac/: __init__.py  aac_orchestrator.py  analysis_manager.py  interactive_editor.py  plan_parser.py  skills_rag.py  stage_executor.py
backend/cli/: __init__.py  app.py  commands.py  layout.py
backend/config/: explorer_config.yaml
backend/core/: __init__.py  core_agent.py  prompts.py  tools.py
backend/data/: bi_solution.json  connections.json  usage_cache.json
backend/mcp_servers/: __init__.py  bigquery_server.js  bigquery_server.py  excel_server.js  excel_server.py  gcp_manager_server.js  gcp_manager_server.py  lifecycle.py  mysql_server.js  mysql_server.py  postgres_server.js  postgres_server.py  snowflake_server.js  snowflake_server.py
backend/orchestrator/: AGENT_MESSAGE_BUS_INTEGRATION.md  COMMAND_HISTORY.md  __init__.py  agent_message_bus.py  auth_manager.py  bi_agent_console.py  bi_agent_console.tcss  collaborative_orchestrator.py  connection_manager.py  context_manager.py  dashboard_view.py  error_viewer_screen.py  hud_statusline.py  interaction_orchestrator.py  interaction_ui.py  llm_provider.py  message_components.py  orchestrator.py  quota_manager.py  refinement_handler.py  thinking_translator.py  tui_meta_preview.py
backend/tests/: test_data_agent.py  test_llm_failover.py  test_mcp_connection.py  test_mysql_agent.py  test_saas_scaffolding.py  verify_bi_agent_mcp.js
backend/utils/: approval_logger.py  (+10 more)
bi_agent_mcp/: __init__.py  __main__.py  config.py  config_manager.py  connections.py  server.py  setup_cli.py
config/: connections.json
context/: 01_business_context.md  02_data_sources.md  03_kpi_dictionary.md  04_analysis_patterns.md  05_glossary.md  README.md
docs/: CHANGELOG_2026-01-28.md  CHANGELOG_2026-01-30.md  CHANGELOG_2026-01-31.md  DESIGN.md  DETAILED_IMPLEMENTATION_PLAN.md  Documentation_system.md  EXPLORE_COMMANDS.md  GCP_SETUP_GUIDE.md  IMPLEMENTATION_PLAN.md  MANUAL.md  MCP_GUIDE.md  MCP_SERVERS.md  PLAN.md  README.md  SETUP_GUIDE.md  TESTING_GUIDELINES.md  TODO.md  USER_GUIDE.md  WORKFLOW.md  WSL_SETUP_GUIDE.md  cloud_bi_ux_design.md  skill_manifest.json
examples/: connections.yaml  poc_demo.py
scripts/: build_dist.sh  demo_real_tableau.py  extract_events_vars.py  migrate_connections.py  run_qa_tests.sh  tableau_session.py
skills/: bi-history.md  bi-solve.md
tests/: conftest.py  run_e2e.py  test_quota_fallback.py
tmp/: sample.xlsx  tableau_test.twbx  test.twb  test_modified.twb
(+298 files in other folders)
