[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "bi-agent-mcp"
version = "0.1.0"
description = "BI 작업 도구를 LLM 클라이언트에 제공하는 MCP 서버"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0",
    "psycopg2-binary>=2.9",
    "pymysql>=1.1",
    "keyring>=24.0",
    "google-auth>=2.0",
    "google-auth-oauthlib>=1.0",
    "google-analytics-data>=0.18",
    "defusedxml>=0.7",
    "httpx>=0.25",
    "google-cloud-bigquery>=3.0",
]

[project.scripts]
bi-agent-mcp = "bi_agent_mcp.server:mcp.run"

[tool.setuptools.packages.find]
include = ["bi_agent_mcp*"]
