[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "bi-agent-mcp"
version = "0.1.0"
description = "BI 작업 도구를 LLM 클라이언트에 제공하는 MCP 서버"
readme = "README.md"
license = {text = "MIT"}
keywords = ["mcp", "bi", "analytics", "llm", "database", "bigquery", "postgresql", "mysql"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0",
    "psycopg2-binary>=2.9",
    "pymysql>=1.1",
    "keyring>=24.0",
    "google-auth>=2.0",
    "google-auth-oauthlib>=1.0",
    "google-analytics-data>=0.18",
    "defusedxml>=0.7",
    "httpx>=0.25",
    "google-cloud-bigquery>=3.0",
    "duckdb>=0.9",
    "openpyxl>=3.1",
    "pandas>=2.0",
    "snowflake-connector-python>=3.0",
]

[project.urls]
Homepage = "https://github.com/zokr/bi-agent"
Repository = "https://github.com/zokr/bi-agent"

[project.scripts]
bi-agent-mcp = "bi_agent_mcp.server:mcp.run"
bi-agent-mcp-setup = "bi_agent_mcp.setup_cli:setup"
bi-agent = "bi_agent_mcp.__main__:main"
bi-agent-setup = "bi_agent_mcp.setup_cli:setup"

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-mock>=3.0",
    "pytest-cov>=4.1",
]

[tool.coverage.run]
source = ["bi_agent_mcp"]
omit = ["*/tests/*", "*/__pycache__/*", "*/venv/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "except ImportError",
    "raise NotImplementedError",
]

[tool.setuptools.packages.find]
include = ["bi_agent_mcp*"]
